--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,9 +2,8 @@ artifacts_root: artifacts
 
 data_ingestion:
   root_dir: artifacts/data_ingestion
-  source_file: D:/CDAC/Project/AI-Driven-Personal-Financial-Risk-Spending-Behavior-Analyzer/Dataset/final_financial_risk_dataset.csv
+  source_url: D:/CDAC/Project/AI-Driven-Personal-Financial-Risk-Spending-Behavior-Analyzer/Dataset/final_financial_risk_dataset.csv
   local_data_file: artifacts/data_ingestion/final_financial_risk_dataset.csv
-
 
 
 
