--- a/params.yaml
+++ b/params.yaml
@@ -1,8 +1,3 @@
-model:
-  name: random_forest
-  max_depth: 10
-  n_estimators: 200
-
-training:
+train_test_split:
   test_size: 0.2
   random_state: 42
