--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,20 +15,14 @@ data_transformation:
   target_column: Risk_Label
 
 
-
 model_trainer:
   root_dir: artifacts/model_trainer
-  train_data_path: artifacts/data_transformation/train.csv
-  test_data_path: artifacts/data_transformation/test.csv
-  model_name: model.joblib
+  model_name: logistic_regression
 
 
 
 model_evaluation:
   root_dir: artifacts/model_evaluation
-  test_data_path: artifacts/data_transformation/test.csv
-  model_path: artifacts/model_trainer/model.joblib
-  metric_file_name: artifacts/model_evaluation/metrics.json
 
 
 
