--- a/params.yaml
+++ b/params.yaml
@@ -1,3 +1,8 @@
 train_test_split:
   test_size: 0.2
   random_state: 42
+
+model_trainer:
+  model_name: logistic_regression
+  C: 1.0
+  max_iter: 1000
